Fixed text-align for About page

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -28,10 +28,8 @@
   box-shadow: 0px 5px 7px rgb(0, 0, 0, 0.3);
 }
 
-@media (max-width: 768px) {
-  .About p {
-    text-align: justify;
-  }
+.About p {
+  text-align: justify;
 }
 
 @media (max-width: 576px) {
@@ -41,5 +39,9 @@
   .About h2,
   h3 {
     font-size: 24px;
+  }
+
+  .About p {
+    text-align: left;
   }
 }
